syntax = "proto3";

package cart.service.v1;

option go_package = "github.com/kx-boutique/api/cart/service/v1;v1";

import "google/protobuf/empty.proto";
import "validate/validate.proto";

service Cart {
  rpc NewCart (NewCartReq) returns (NewCartResp) {}
  rpc AddItemToCart (AddItemToCartReq) returns (AddItemToCartResp) {}
  rpc RemoveItemFromCart (RemoveItemFromCartReq) returns (RemoveItemFromCartResp) {}
  rpc CheckOutCartItem (CheckOutCartItemReq) returns (CheckOutCartItemResp) {}
  rpc ViewMyCart (google.protobuf.Empty) returns (ViewMyCartResp) {}
}

message NewCartReq {
  string user_id = 1 [(validate.rules).string.uuid = true];
}

message NewCartResp {
  string id = 1;
}

message AddItemToCartReq {
  string product_id = 1 [(validate.rules).string.uuid = true];
  int32 qty = 2 [(validate.rules).int32.gt = 0];
}

message AddItemToCartResp {
  string product_id = 1;
  int32 qty = 2;
}

message RemoveItemFromCartReq {
  string product_id = 1 [(validate.rules).string.uuid = true];
}

message RemoveItemFromCartResp {
  string product_id = 1;
}

message CheckOutCartItemReq {
  repeated string ids = 1 [(validate.rules).repeated.items.string.uuid = true];
}

message CheckOutCartItemResp {
  repeated string ids = 1;
}

message ViewMyCartResp {
  message Item {
    string id = 1;
    string product_id = 2;
    string name = 3;
    double price = 4;
    int32 qty = 5;
  }
  string cart_id = 1;
  double total_price = 2;
  repeated Item items = 3;
}

